@@ -1,3 +1,7 @@
+2006-02-23  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* gdb.base/default.exp: Allow ';' as a directory separator.
+
 2006-02-21  Andrew Stubbs  <andrew.stubbs@st.com>
 
 	* gdb.base/help.exp (help add-symbol-file): Update.
